--- a/SpotifyAlarmClock/Base.lproj/Main.storyboard
+++ b/SpotifyAlarmClock/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
+        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -668,6 +669,8 @@
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0nM-FQ-g5p">
                                             <rect key="frame" x="13" y="8" width="58" height="58"/>
                                             <constraints>
+                                                <constraint firstAttribute="height" constant="58" id="Amb-Q5-COy"/>
+                                                <constraint firstAttribute="width" constant="58" id="tHQ-PX-xkd"/>
                                                 <constraint firstAttribute="width" secondItem="0nM-FQ-g5p" secondAttribute="height" multiplier="1:1" id="zII-e7-3j2"/>
                                             </constraints>
                                         </imageView>
